# znfields

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  pytest.yaml
lazyfields/: __init__.py
tests/: test_decorator.py  test_inheritance.py  test_lazyfields.py  test_readme.py  test_znfields.py
znfields/: __init__.py
